--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,40 @@
-/* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Poppins", sans-serif;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
+}
+.add-form {
+  margin-bottom: 40px;
+}
+.form-control {
+  margin: 20px 0;
+
+  label {
+    display: block;
+  }
+  input {
+    width: 100%;
+    height: 40px;
+    margin: 5px;
+    padding: 3px 7px;
+    font-size: 17px;
+  }
+}
+.form-control-check {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  label {
+    flex: 1;
+  }
+  input {
+    flex: 2;
+    height: 20px;
+  }
+}
