Created tasks & task components

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,7 +3,7 @@
   margin: 30px;
   overflow: auto;
   min-height: 300px;
-  border: 1px solid steelblue;
+  border: 1px solid crimson;
   padding: 30px;
   border-radius: 5px;
 }
