--- a/src/app/components/task-item/task-item.component.html
+++ b/src/app/components/task-item/task-item.component.html
@@ -1,7 +1,11 @@
 <div class="task">
   <h3>
     {{ task.text }}
-    <i class="fal fa-times" [ngStyle]="{ color: 'crimson' }"></i>
+    <i
+      class="fal fa-times"
+      [ngStyle]="{ color: 'crimson' }"
+      (click)="onDelete(task)"
+    ></i>
   </h3>
   <p>{{ task.day }}</p>
 </div>
