--- a/src/app/components/task-item/task-item.component.scss
+++ b/src/app/components/task-item/task-item.component.scss
@@ -4,12 +4,13 @@
   padding: 10px 20px;
   cursor: pointer;
 
+  &.reminder {
+    border-left: 5px solid crimson;
+  }
+
   h3 {
     display: flex;
     align-items: center;
     justify-content: space-between;
-  }
-  .reminder {
-    border-left: 5px solid crimson;
   }
 }
