--- a/src/app/components/button/button.component.scss
+++ b/src/app/components/button/button.component.scss
@@ -10,6 +10,7 @@ button {
   text-decoration: none;
   font-size: 15px;
   font-family: inherit;
+  transition: all 0.2s;
 
   &:focus {
     outline: none;
@@ -17,8 +18,8 @@ button {
   &:active {
     transform: scale(0.98);
   }
-}
-.btn-block {
-  display: block;
-  width: 100%;
+
+  &:hover {
+    transform: scale(1.1);
+  }
 }
